Metatags for SEO of Website

--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="title" content="پلتفرم برنامه ریزی دانشجویی">
+    <meta name="description" content="این پلتفرم برای دانشجویان ایرانی ساخته شده تا با ارائه درس و واحد های مرتبط برنامه درسی مورد نیاز دریافت کنن.">
+    <meta name="keywords" content="دانشجویی، برنامه ریزی دانشجویی، برنامه ریزی دانشگاه، برنامه درسی، برنامه درسی دانشجویی">
+    <meta name="robots" content="index, nofollow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="author" content="Reza Aghajani | @BoredReza">
 </head>
 <body>
+    
     
 </body>
 </html>
